@@ -168,8 +168,8 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   error_invalid_title              "You must specify a title."
   error_media_type_id              "You must specify a media type."
   error_category_id                "You must specify a site/category."
-  error_media_file                 "You must specify a media file."
-  duplicate_url                    "The filename of the media you are uploading already exists in this category. Please use a different filename."
+  empty_file_created               "No file uploaded; creating an empty file called '$filename'"
+  duplicate_url                    "The filename of the media you are adding already exists in this category. Please use a different filename."
   no_category_access               "You do not have edit access to category $url (ID: $id)"
   message_revert_version           "This media has been reverted to version $version"
   selected_media_checkin           "The selected media has been checked in."
